--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,36 @@
-%! Author = jubong
+%! Author = jubong,
 %! Date = 2020/02/18
+\documentclass{article}
+\usepackage[nonfrench,finemath,hangul]{kotex}
+\usepackage{dhucs-nanumfont}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 
-% Preamble
-\documentclass[11pt]{article}
+\oddsidemargin=0in
+\evensidemargin=0in
+\textwidth=6.3in
+\topmargin=-.5in
+\textheight=9in
 
-% Packages
-\usepackage{amsmath}
+\parindent=0in
+\pagestyle{empty}
 
-% Document
+
 \begin{document}
+    \centerline{\huge \bf Miracle English Composition}        %%%(number of test)
+    \vfill \vfill
+        from 2020.02.18~
+    \hfill
+    \begin{itemize}
+        \item LINK. Lab
+    \end{itemize}
 
+    \newpage
 
+    \tableofcontents
 
+    \include{chapters/chapter01/tense}
+    \include{chapters/chapter01/tense_jubong}
+    \medskip
 \end{document}
